--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.15.6",
     "gulp": "^3.9.1",
     "gulp-less": "^4.0.0",
+    "jquery": "^3.3.1",
     "method-override": "^2.3.10",
     "mongoose": "^5.0.15"
   }
