--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "gulp": "^3.9.1",
     "gulp-less": "^4.0.0",
     "jquery": "^3.3.1",
+    "jsdom": "^11.9.0",
     "method-override": "^2.3.10",
-    "mongoose": "^5.0.15"
+    "mongoose": "^5.0.15",
+    "npm": "^6.0.0"
   }
 }
