--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^2.0.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
+    "dotenv": "^5.0.1",
     "ejs": "^2.5.9",
     "express": "^4.16.3",
     "express-ejs-layouts": "^2.4.0",
