updated json packages

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsdom": "^11.9.0",
     "method-override": "^2.3.10",
     "mongoose": "^5.0.15",
+    "nodemon": "^1.17.4",
     "npm": "^6.0.0"
   }
 }
