--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsdom": "^11.12.0",
     "method-override": "^2.3.10",
     "mongoose": "^5.2.7",
+    "nodemailer": "^4.6.7",
     "nodemon": "^1.18.3",
     "npm": "^6.3.0"
   }
