updated npm and node versions in engine

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "seed": "node ./seeds/userSeed.js && node ./seeds/artistSeed.js && node ./seeds/eventSeed.js && node ./seeds/dataFix.js"
   },
   "engines": {
-    "node": "5.0.0",
-    "npm": "4.6.1"
+    "node": "8.11.3",
+    "npm": "6.4.0"
   },
   "repository": {
     "type": "git",
@@ -39,6 +39,7 @@
     "mongoose": "^5.2.7",
     "nodemailer": "^4.6.7",
     "nodemon": "^1.18.3",
-    "npm": "^6.3.0"
+    "npm": "^6.3.0",
+    "serve-favicon": "^2.5.0"
   }
 }
